Fixes alignment issue.

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,9 @@ canvas {
 }
 
 #buttons {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #artContainer {
